- When the main() function returns directly or indirectly by way of
  calling exit(), the IoErr() value set at this time will now be
  preserved until the program really returns control to the shell.
  This turned out to be easier to implement than I had originally
  thought, thanks to the fact that the atexit() functions are all
  invoked straight after the exit() call.

- strtoimax(), strtoumax(), strtod(), strtof(), strtol(), strtoll(),
  strtoul() and strtoull() now count how many digits were converted.
  If that number is zero, then the conversion is considered to have
  failed: 0 is returned and the 'ptr' parameter reference is initialized
  with a pointer to the string to be converted. This has two consequences:

     1) A floating point number that has no digits in the significand
        is no longer converted to zero. For example ".e10" can no longer
        result in a successful conversion.

     2) You can detect if a conversion is successful by comparing pointers
        after the conversion function has returned:

           char * str;
           char * ptr;
           long n;

           n = strtol(str,&ptr,10);
           if(n == 0 && str == ptr)
              printf("conversion has failed");

- Following detection of a stack overflow, the startup code eventually
  called _exit(). It should have called exit() instead.

- tmpnam() wrote more than L_tmpnam bytes to the name buffer. Also, the
  TMP_MAX value was off by one.


c.lib 1.195 (3.9.2005)

- In __time_delay() the CheckIO() test was wrong and should have
  tested for a request still in progress. Fixed.

- Modified select() to support plain files, too. The new code now
  compares the current file position against the current file size,
  if that file is on a file system, or simply checks if there is
  any data in the file (which works for the default PIPE: device).

- The raw file descriptor structure member fd_Position is now
  always updated, regardless of whether the file supports random