@@ -1,3 +1,8 @@
+- accept() now calls the bsdsocket.library accept() function first
+  and then hooks up the socket with the clib2 data structures. This
+  makes it possible to have several Processes calling the accept()
+  stub at the same time.
+
 - When the main() function returns directly or indirectly by way of
   calling exit(), the IoErr() value set at this time will now be
   preserved until the program really returns control to the shell.
